Fix minor bugs fixed

--- a/views/shop/orders.pug
+++ b/views/shop/orders.pug
@@ -1,3 +1,20 @@
 extends ../layouts/main-layout.pug
 
 block content
+        main
+        if orders.length > 0
+            div(class="w-screen my-4")
+                ul(class="flex flex-col items-center")
+                    each order in orders
+                        -   var order_id = order._id
+                        li(class="w-11/12 my-8")
+                            h1(class="mx-6 py-6 text-xl text-center lg:text-lg font-mono font-bold") Order-# #{order_id} 
+                            each orderItem in order.items
+                                    div(class="flex flex-row justify-between bg-gray-50 box-content my-6 ring-2 ring-teal-400 ring-offset-4 rounded-xl shadow-xl") 
+                                        h2(class="mx-6 py-6 text-md lg:text-md font-mono font-bold") #{orderItem.title}
+                                        h2(class="mx-6 py-6 text-md lg:text-md font-mono font-bold") $#{orderItem.price}
+                                        h2(class="mx-6 py-6 text-md lg:text-md font-mono font-bold") x#{orderItem.quantity}
+                                    hr
+                                    
+        else   
+            h1 No orders in the Database!
