--- a/views/shop/index.pug
+++ b/views/shop/index.pug
@@ -4,21 +4,21 @@ block content
             main
             if prods.length > 0
                 div(class="mx-28 my-12")
-                    div(class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 place-content-center gap-24")
+                    div(class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-4 justify-items-center gap-24")
                         each product in prods
                             article(class="bg-gray-100 relative box-content my-4 mx-4 h-56 w-48 lg:h-72 lg:w-64 rounded-xl shadow-xl")
                                 header(class="absolute")
-                                    h1(class="mx-2 text-xl font-mono font-bold") #{product.title}
-                                div(class="absolute")
+                                    h1(class="mx-2 text-md md:text-xl font-mono font-bold") #{product.title}
+                                div(class="absolute py-4")
 
                                   - var url = product.imageURL
                                   - var title = product.title
                                   
                                     
                                     img(class="w-2/3 h-2/3 lg:w-3/4 lg:h-3/4 rounded-md shadow-lg mx-8 my-10" src= url, alt= title)
-                                div(class="absolute mx-4 my-36 lg:my-48")
-                                    h2(class="text-md font-mono font-bold") $#{product.price}
-                                    p(class="text-xs md:text-sm font-light font-mono tracking-normal") #{product.description}
+                                div(class="absolute mx-4 mt-36 lg:mt-48 w-10/12")
+                                    h2(class="text-sm md:text-lg mt-8 md:mt-4 font-mono font-bold") $#{product.price}
+                                    p(class="text-xs md:text-sm truncate md:mt-4 font-light font-mono tracking-normal") #{product.description}
                                 div(class="flex justify-end")
                                     include ../layouts/cat-form.pug
                            
