Fix user authentication added

--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -43,5 +43,8 @@ html(lang="en")
                             a(class="font-mono font-bold md:font-medium lg:font-semibold text-sm md:text-xl lg:text-2xl" href="/products") PRODUCTS
                         li(class=(path==="/login"?"block h-full w-full bg-gray-600 ring-2 ring-teal-300 text-gray-100 text-center rounded-xl md:rounded-lg py-6 md:py-8 lg:py-10 hover:my-0 hover:rounded-xl hover:md:rounded-lg hover:py-6 hover:md:py-8 hover:md:py-10 hover:bg-gray-700 hover:scale-105 hover:text-white hover:shadow-xl": "block h-full w-full text-center rounded-xl ring-2 ring-blue-300 md:rounded-lg py-6 md:py-8 lg:py-10 hover:my-0 hover:rounded-xl hover:md:rounded-lg hover:py-6 hover:md:py-8 hover:md:py-10 hover:bg-gray-700 hover:scale-105 ring-1 ring-gray-200 hover:text-slate-50 hover:shadow-xl"))
                             a(class="font-mono font-bold md:font-medium lg:font-semibold text-sm md:text-xl lg:text-2xl" href="/login") LOGIN
+                        li(class=(path==="/signup"?"block h-full w-full bg-gray-600 text-gray-100 text-center rounded-xl md:rounded-lg py-6 md:py-8 lg:py-10 hover:my-0 hover:rounded-xl hover:md:rounded-lg hover:py-6 hover:md:py-8 hover:md:py-10 hover:bg-gray-700 hover:scale-105 hover:text-white hover:shadow-xl": "block h-full w-full text-center rounded-xl md:rounded-lg py-6 md:py-8 lg:py-10 hover:my-0 hover:rounded-xl hover:md:rounded-lg hover:py-6 hover:md:py-8 hover:md:py-10 hover:bg-gray-700 hover:scale-105 hover:text-slate-50 hover:shadow-xl"))
+                            a(class="font-mono font-bold md:font-medium lg:font-semibold text-sm md:text-xl lg:text-2xl" href="/signup") SIGNUP
                         
+
             block content
