--- a/views/auth/login-form.pug
+++ b/views/auth/login-form.pug
@@ -4,22 +4,29 @@ block content
     main(class="flex flex-col items-center mt-20")
                     div(class="block box-content bg-gray-50 h-80 xl:h-96 w-80 xl:w-80 shadow-xl rounded-xl")
                         form(action="/login" method="POST")
-                            div(class="flex flex-col my-24 items-center")
-                                div(class="flex flex-col gap-24")
-                                    div(class="flex flex-col gap-8")
-                                        div(class="flex flex-row items-center gap-10")
-                                                        label(class="pl-4 text-mono font-medium" for="email") Email
-                                                        input(class="ring-2 ring-gray-300 rounded-md pl-4 text-mono shadow-lg font-medium" placeholder="type here..." type="email" name="email" id="email")
-                                                        
-                                        div(class="flex flex-row items-center gap-6")
-                                                        label(class="pl-4 text-mono font-medium" for="password") Password
-                                                        input(class="ring-2 ring-gray-300 rounded-md pl-4 -ml-3 text-mono shadow-lg font-medium" placeholder="type here..." type="password" name="password" id="password")
-                                                        
-                                    input(type="hidden" name="_csrf" value=csrfToken)
-                                    button(class="font-mono font-semibold mx-6" type="submit")
-                                        span(class="block box-content rounded-md ring-2 hover:ring-teal-500 bg-gray-200 shadow-lg h-ful w-full px-1 hover:scale-105 hover:bg-gray-700 hover:text-slate-50 hover:shadow-xl") LOGIN
+                            div(class="flex flex-col my-20 items-center")
+                                div(class="flex flex-col gap-24")    
+                                    div(class="flex flex-col")
+                                        div(class="flex flex-col gap-10")
+                                            div(class="flex flex-row items-center gap-10")
+                                                            label(class="pl-4 text-mono font-medium" for="email") Email
+                                                            input(class="ring-2 ring-gray-300 rounded-md pl-4 text-mono shadow-lg font-medium" placeholder="type here..." type="email" name="email" id="email")
+                                                            
+                                            div(class="flex flex-row items-center gap-6")
+                                                            label(class="pl-4 text-mono font-medium" for="password") Password
+                                                            input(class="ring-2 ring-gray-300 rounded-md pl-4 -ml-3 text-mono shadow-lg font-medium" placeholder="type here..." type="password" name="password" id="password")
+                                                            
+                                    div(class="flex flex-col gap-6")
+                                        input(type="hidden" name="_csrf" value=csrfToken)
+                                        button(class="font-mono font-semibold mx-6" type="submit")
+                                            span(class="block box-content rounded-md ring-2 hover:ring-teal-500 bg-gray-200 shadow-lg h-ful w-full px-1 hover:scale-105 hover:bg-blue-700 hover:text-slate-50 hover:shadow-xl") LOGIN
+                                        
+                                        a(class="font-mono font-semibold mx-6" href="/reset")
+                                            span(class="block box-content text-center tracking-wide rounded-md ring-2 ring-red-300 hover:tracking-wide hover:ring-red-500 bg-red-200 shadow-lg h-ful w-full px-1 hover:scale-105 hover:bg-red-400 hover:text-slate-50 hover:shadow-xl") FORGOT PASSWORD
+                                    
+                                
                                 if errorMessage
-                                        div(class="block box-content text-center bg-red-200 mt-10 h-9/12 w-11/12 shadow-xl rounded-sm ring-2 ring-red-400")
+                                        div(class="block box-content text-center bg-red-200 mt-4 h-9/12 w-11/12 shadow-xl rounded-sm ring-2 ring-red-400")
                                             p(class="text-xs md:text-sm font-mono text-gray-800") #{errorMessage}
 
                                 
