--- a/views/admin/edit-products.pug
+++ b/views/admin/edit-products.pug
@@ -10,8 +10,8 @@ block content
        
        
         main(class="flex flex-col items-center mt-20")
-                    div(class="block box-content bg-gray-50 h-80 xl:h-96 w-80 xl:w-80 shadow-xl rounded-xl")
-                        form(action="/admin/edit-products" method="POST")
+                    div(class="block box-content bg-gray-50 h-80 xl:h-96 w-fit shadow-xl rounded-xl")
+                        form(action="/admin/edit-products" method="POST" enctype="multipart/form-data")
                             div(class="flex flex-col my-16 items-center content-end")
                                 div(class="flex flex-col gap-6")
                                     
@@ -20,10 +20,16 @@ block content
                                                     input(type="hidden" name = "id" value= id)
                                                     input(class="ring-2 ring-gray-300 rounded-md pl-4 text-mono font-medium" placeholder="type here..." type="text" name="title" id="title" value= title)
                                                     
-                                    div(class="flex flex-row items-center gap-6")
+                                    //div(class="flex flex-row items-center gap-6")
                                                     label(class="pl-4 text-mono font-medium" for="imageURL") Image
                                                     input(class="ring-2 ring-gray-300 rounded-md pl-4 -ml-3 text-mono font-medium" placeholder="here..." type="text" name="imageURL" id="imageURL" value= url)
                                     
+                                    div(class="flex flex-row items-center gap-6")
+                                                    label(class="pl-4 text-mono font-medium" for="image") Image
+                                                    input(class="ring-2 ring-gray-300 rounded-md text-mono font-medium" placeholder="here..." type="file" name="image" id="image" value= url)
+                                    
+
+
                                     div(class="flex flex-row items-center gap-6")
                                                     label(class="pl-4 text-mono font-medium" for="price") Price
                                                     input(class="ring-2 ring-gray-300 rounded-md pl-4 =ml-1 text-mono font-medium" placeholder="price..." type="number" step="0.01" name="price" id="price" value= price)
@@ -50,8 +56,8 @@ block content
         -   var desc =  product.description;
        
         main(class="flex flex-col items-center mt-20")
-                    div(class="block box-content bg-gray-50 h-80 xl:h-96 w-80 xl:w-80 shadow-xl rounded-xl")
-                        form(action="/admin/add-products" method="POST")
+                    div(class="block box-content bg-gray-50 h-80 xl:h-96 w-fit shadow-xl rounded-xl")
+                        form(action="/admin/add-products" method="POST" enctype="multipart/form-data")
                             div(class="flex flex-col my-16 items-center content-end")
                                 div(class="flex flex-col gap-6")
                                     
@@ -60,10 +66,16 @@ block content
                                                     input(type="hidden" name = "id" value= id)
                                                     input(class="ring-2 ring-gray-300 rounded-md pl-4 text-mono font-medium" placeholder="type here..." type="text" name="title" id="title" value= title)
                                                     
-                                    div(class="flex flex-row items-center gap-6")
+                                    //div(class="flex flex-row items-center gap-6")
                                                     label(class="pl-4 text-mono font-medium" for="imageURL") Image
                                                     input(class="ring-2 ring-gray-300 rounded-md pl-4 -ml-3 text-mono font-medium" placeholder="here..." type="text" name="imageURL" id="imageURL" value= url)
                                     
+                                    div(class="flex flex-row items-center gap-6")
+                                                    label(class="pl-4 text-mono font-medium" for="image") Image
+                                                    input(class="ring-2 ring-gray-300 rounded-md text-mono font-medium" placeholder="here..." type="file" name="image" id="image" value= url)
+                                    
+
+
                                     div(class="flex flex-row items-center gap-6")
                                                     label(class="pl-4 text-mono font-medium" for="price") Price
                                                     input(class="ring-2 ring-gray-300 rounded-md pl-4 =ml-1 text-mono font-medium" placeholder="price..." type="number" step="0.01" name="price" id="price" value= price)
@@ -84,8 +96,8 @@ block content
     
     else 
         main(class="flex flex-col items-center mt-20")
-                    div(class="block box-content bg-gray-50 h-80 xl:h-96 w-80 xl:w-80 shadow-xl rounded-xl")
-                        form(action="/admin/add-products" method="POST")
+                    div(class="block box-content bg-gray-50 h-80 xl:h-96 w-fit shadow-xl rounded-xl")
+                        form(action="/admin/add-products" method="POST" enctype="multipart/form-data")
                             div(class="flex flex-col my-16 items-center content-end")
                                 div(class="flex flex-col gap-6")
                                     
@@ -93,10 +105,15 @@ block content
                                                     label(class="pl-4 text-mono font-medium" for="title") Title
                                                     input(class="ring-2 ring-gray-300 rounded-md pl-4 text-mono font-medium" placeholder="type here..." type="text" name="title" id="title")
                                                     
-                                    div(class="flex flex-row items-center gap-6")
+                                    //div(class="flex flex-row items-center gap-6")
                                                     label(class="pl-4 text-mono font-medium" for="imageURL") Image
                                                     input(class="ring-2 ring-gray-300 rounded-md pl-4 -ml-3 text-mono font-medium" placeholder="here..." type="text" name="imageURL" id="imageURL")
                                     
+                                    div(class="flex flex-row items-center gap-6")
+                                                    label(class="pl-4 text-mono font-medium" for="image") Image
+                                                    input(class="ring-2 ring-gray-300 rounded-md text-mono font-medium" placeholder="here..." type="file" name="image" id="image")
+                                                
+
                                     div(class="flex flex-row items-center gap-6")
                                                     label(class="pl-4 text-mono font-medium" for="price") Price
                                                     input(class="ring-2 ring-gray-300 rounded-md pl-4 =ml-1 text-mono font-medium" placeholder="price..." type="number" step="0.01" name="price" id="price")
